# experiments

./: .gitignore  README.md
bash/containers-from-scratch/: README.md  container-in-few-lines-of-code.sh
bun.sh/examples/: README.md  bun.lockb  package.json
c/: httpd.c
c/www/: index.html
go/atomic-counters/: example1.go
go/base64-encoding/: example1.go
go/channel-buffering/: example1.go
go/channel-synchronization/: example1.go
go/channels/: example1.go
go/collection-functions/: example1.go
go/command-line-arguments/: example1.go
go/command-line-flags/: example1.go
go/command-line-subcommands/: example1.go
go/defer/: example1.go
go/directories/: example1.go
go/echo-framework/: README.md  go.mod  go.sum  server.go
go/environment-variables/: example1.go
go/epoch/: example1.go
go/errors/: example1.go
go/everyday-go/: go.mod
go/execing-processes/: example1.go
go/file-paths/: example1.go
go/for-loop/: example1.go
go/functions/: example1.go
go/goroutines/: example1.go
go/http-clients/: example1.go
go/http-servers/: example1.go
go/json/: example1.go
javascript/: package.json
rust/kvs/: .gitignore  Cargo.toml  README.md  rustfmt.toml
rust/kvs/benches/: engine_bench.rs
rust/kvs/benches/runs/: 2019-11-23-ubuntu1604-local  2019-11-26-ubuntu1604-local  2019-11-26-ubuntu1604-local-2  2019-11-27-ubuntu1604-local
rust/kvs/src/: client.rs  common.rs  error.rs  lib.rs  server.rs
rust/kvs/src/engines/: kvs.rs  mod.rs  sled.rs
rust/kvs/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
solidjs/: package-lock.json
(+656 files in other folders)
