[package]
name = "kvs"
version = "0.1.0"
authors = ["Cedric Chee <cedric@invictusbyte.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
structopt = "0.3"
failure = "0.1.6"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.8"
env_logger = "0.7.1"
sled = "0.29.2"
crossbeam = "0.7.3"
num_cpus = "1.11.1"
rayon = "1.2.1"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam", rev = "8cc906b" }
tokio = "0.1.21"
tokio-serde-json = "0.2.0"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.3.0"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs-client"
test = false

[[bin]]
name = "kvs-server"
test = false

[[bench]]
name = "engine_bench"
harness = false
